Updated version to 3.0, removed OSGi, Cassandra 5.0 support only, JDK17 only, added Vector and SAI support for the APIs