@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.stargate</groupId>
     <artifactId>stargate</artifactId>
-    <version>2.0.34-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
   <!-- Artifact props -->
   <groupId>io.stargate.cql</groupId>
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>org.apache.cassandra</groupId>
       <artifactId>cassandra-all</artifactId>
-      <version>4.0.17</version>
+      <version>5.0.4</version>
       <exclusions>
         <exclusion>
           <groupId>org.gridkit.jvmtool</groupId>
@@ -124,44 +124,9 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <configuration>
-          <unpackBundle>true</unpackBundle>
-          <instructions>
-            <Bundle-Name>CQL</Bundle-Name>
-            <Bundle-Description>CQL service for Stargate</Bundle-Description>
-            <Bundle-SymbolicName>io.stargate.cql</Bundle-SymbolicName>
-            <Bundle-Activator>io.stargate.cql.CqlActivator</Bundle-Activator>
-            <!-- TODO [doug] do this the right way https://baptiste-wicht.com/posts/2010/03/bundle-non-osgi-dependencies-maven.html -->
-            <Import-Package><![CDATA[
-                            org.slf4j,
-                            org.slf4j.helpers,
-                            org.slf4j.spi,
-                            org.osgi.framework,
-                            io.stargate.core.*,
-                            io.stargate.auth,
-                            io.stargate.db,
-                            io.stargate.db.*,
-                            org.apache.cassandra.stargate,
-                            org.apache.cassandra.stargate.*,
-                            org.javatuples,
-                            com.codahale.metrics,
-                            io.micrometer.core.*,
-                            com.datastax.oss.driver.shaded.guava.common.*,
-                        ]]></Import-Package>
-            <Export-Package>!*</Export-Package>
-            <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
-            <Embed-Transitive>true</Embed-Transitive>
-          </instructions>
-          <buildDirectory>${project.basedir}/../stargate-lib</buildDirectory>
-        </configuration>
-      </plugin>
-      <plugin>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <archive>
-            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
             <manifestEntries>
               <x-Stargate-Health-Checkers>cql</x-Stargate-Health-Checkers>
             </manifestEntries>
@@ -171,6 +136,9 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>${surefire.jacoco.args} --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
